hi-app/hi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hi-html-service
spec:
  type: ClusterIP
  selector:
    app: hi-html
  ports:
  - port: 80
    targetPort: 80
